--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
   <html>
 	<head>
-		<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
-		<title></title>
+		<meta charset="utf-8">
+                <link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+		<title>Title of the page</title>
 	</head>
 	<body>
 		<div id="header">
