--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                            <li>
                                    <a href="#">Contact</a>
                            </li>
-                           <li>
+                           <li class="last-button">
                                    <a href="#">Buy it now</a>
                            </li>
                    </ul>
