Created Product section

--- a/index.html
+++ b/index.html
@@ -6,32 +6,50 @@
                 <link rel="stylesheet" href="css/style.css">
         </head>
         <body>
+             <div class="header-wrapper">
+                 <header class="container header clearfix">
+                     <a href="#" class="header-logo">
+                         <img src="images/logo.png" alt="Logo">
+                     </a>
+                     <ul class="header-nav">
+                         <li>
+                             <a href="#">Product</a>
+                         </li>
+                         <li>
+                             <a href="#">Features</a>
+                         </li>
+                         <li>
+                             <a href="#">Reviews</a>
+                         </li>
+                         <li>
+                             <a href="#">Pages</a>
+                         </li>
+                         <li>
+                             <a href="#">Contact</a>
+                         </li>
+                         <li class="last-button">
+                             <a href="#">Buy it now</a>
+                         </li>
+                     </ul>
+                 </header>
+             </div>
 
-           <header class="container header clearfix">
-                   <a href="#" class="header-logo">
-                           <img src="images/logo.png" alt="Logo">
+             <section class="product">
+               <div class="container">
+                   <h1 class="product-title">
+                       The future of tech is here
+                   </h1>
+                   <p class="product-description">
+                       Holisticly incentivize revolutionary collaboration and idea sharing before cost effective users. Actual focused services before highly efficient human capital.
+                   </p>
+                   <a href="#" class="product-cta">
+                       Buy with paypal
                    </a>
-                   <ul class="header-nav">
-                           <li>
-                                   <a href="#">Product</a>
-                           </li>
-                           <li>
-                                   <a href="#">Featuers</a>
-                           </li>
-                           <li>
-                                   <a href="#">Reviews</a>
-                           </li>
-                           <li>
-                                   <a href="#">Pages</a>
-                           </li>
-                           <li>
-                                   <a href="#">Contact</a>
-                           </li>
-                           <li class="last-button">
-                                   <a href="#">Buy it now</a>
-                           </li>
-                   </ul>
-           </header>
+                   <div class="product-image">
+                       <img src="images/apple-watch.png" width="290px" height="328px" alt="Watch">
+                   </div>
+               </div>
+             </section>
 
         </body>
 </html>
