--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
              <div class="header-wrapper">
                  <header class="container header clearfix">
                      <a href="#" class="header-logo">
-                         <img src="images/logo.png" alt="Logo">
+                         <img src="img/logo.png" alt="Logo">
                      </a>
                      <ul class="header-nav">
                          <li>
@@ -46,10 +46,91 @@
                        Buy with paypal
                    </a>
                    <div class="product-image">
-                       <img src="images/apple-watch.png" width="290px" height="328px" alt="Watch">
+                       <img src="img/apple-watch.png" width="290px" height="328px" alt="Watch">
                    </div>
                </div>
              </section>
+
+            <section class="the-product">
+                <div class="container">
+                    <h1 class="the-product-title">
+                        The product
+                    </h1>
+                    <p class="the-product-description">
+                        Introduce the product here. A small description about what it is and how it helps the user. You can also add some photos below.
+                    </p>
+                    <h1 class="the-product-underscore">
+                        __
+                    </h1>
+                    <div class="the-product-image">
+                        <img src="img/apple-watch-2.png">
+                        <span class="topright">
+                            +
+                        </span>
+                        <span class="bottomright">
+                            +
+                        </span>
+                        <span class="topleft">
+                            +
+                        </span>
+                        <span class="bottomleft">
+                            +
+                        </span>
+                    </div>
+                </div>
+            </section>
+
+            <section class="how-it clearfix">
+                <div class="container">
+                    <h1 class="how-it-title">
+                        How it works
+                    </h1>
+                    <p class="how-it-description">
+                        Everybody loves tech gadgets, But our’s is different. Here is how it works. Its should be simple. Add how easy is to install your product
+                    </p>
+                </div>
+                <img src="img/big-right-arrow.png" class="leftarrow">
+                <img src="img/big-right-arrow.png" class="rightarrow">
+                    <div class="connect-device">
+                        <div class="desktop">
+                            <img src="img/desktop.png">
+                        </div>
+                        <h3 class="desktop-title">
+                            Connect Device
+                        </h3>
+                        <p class="desktop-description">
+                            Lorem ipsum dolor sit amet, consectetur de
+                            elit, sed do tempor incididunt ut labore eta
+                            rehenderit in voluptate velit.
+                        </p>
+                    </div>
+                    <div class="configure">
+                        <div class="desktop">
+                            <img src="img/toggles.png">
+                        </div>
+                        <h3 class="desktop-title">
+                            Configure it
+                        </h3>
+                        <p class="desktop-description">
+                            Lorem ipsum dolor sit amet, consectetur de
+                            elit, sed do tempor incididunt ut labore eta
+                            rehenderit in voluptate velit.
+                        </p>
+                    </div>
+                    <div class="done">
+                        <div class="desktop">
+                            <img src="img/trophy.png">
+                        </div>
+                        <h3 class="desktop-title">
+                            Yay! Done.
+                        </h3>
+                        <p class="desktop-description">
+                            Lorem ipsum dolor sit amet, consectetur de
+                            elit, sed do tempor incididunt ut labore eta
+                            rehenderit in voluptate velit.
+                        </p>
+                    </div>
+            </section>
 
         </body>
 </html>
