--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                        The future of tech is here
                    </h1>
                    <p class="product-description">
-                       Holisticly incentivize revolutionary collaboration and idea sharing before cost effective users. Actual focused services before highly efficient human capital.
+                       Holisticly incentivize revolutionary collaboration and idea sharing before cost effective users.
+                       Actual focused services before highly efficient human capital.
                    </p>
                    <a href="#" class="product-cta">
                        Buy with paypal
@@ -51,84 +52,71 @@
                </div>
              </section>
 
-            <section class="the-product">
+            <section class="section product-section">
                 <div class="container">
-                    <h1 class="the-product-title">
+                    <h2 class="section-title">
                         The product
-                    </h1>
-                    <p class="the-product-description">
-                        Introduce the product here. A small description about what it is and how it helps the user. You can also add some photos below.
+                    </h2>
+                    <p class="section-description">
+                        Introduce the product here. A small description about what it is and how it helps the user.
+                        You can also add some photos below.
                     </p>
-                    <h1 class="the-product-underscore">
-                        __
-                    </h1>
-                    <div class="the-product-image">
-                        <img src="img/apple-watch-2.png">
-                        <span class="topright">
-                            +
-                        </span>
-                        <span class="bottomright">
-                            +
-                        </span>
-                        <span class="topleft">
-                            +
-                        </span>
-                        <span class="bottomleft">
-                            +
-                        </span>
+
+                    <div class="product-section product-section-watch">
+                        <div class="watch-tip">+</div>
+                        <div class="watch-tip">+</div>
+                        <div class="watch-tip">+</div>
+                        <div class="watch-tip">+</div>
                     </div>
                 </div>
             </section>
 
-            <section class="how-it clearfix">
+            <section class="section section-dark hiw-section">
                 <div class="container">
-                    <h1 class="how-it-title">
+                    <h2 class="section-title">
                         How it works
-                    </h1>
-                    <p class="how-it-description">
-                        Everybody loves tech gadgets, But our’s is different. Here is how it works. Its should be simple. Add how easy is to install your product
+                    </h2>
+                    <p class="section-description">
+                        Everybody loves tech gadgets, But our’s is different. Here is how it works. Its should be simple.
+                        Add how easy is to install your product
                     </p>
-                <img src="img/big-right-arrow.png" class="leftarrow">
-                <img src="img/big-right-arrow.png" class="rightarrow">
-                    <div class="connect-device">
-                        <div class="desktop">
-                            <img src="img/desktop.png">
-                        </div>
-                        <h3 class="desktop-title">
-                            Connect Device
-                        </h3>
-                        <p class="desktop-description">
-                            Lorem ipsum dolor sit amet, consectetur de
-                            elit, sed do tempor incididunt ut labore eta
-                            rehenderit in voluptate velit.
-                        </p>
-                    </div>
-                    <div class="configure">
-                        <div class="desktop">
-                            <img src="img/toggles.png">
-                        </div>
-                        <h3 class="desktop-title">
-                            Configure it
-                        </h3>
-                        <p class="desktop-description">
-                            Lorem ipsum dolor sit amet, consectetur de
-                            elit, sed do tempor incididunt ut labore eta
-                            rehenderit in voluptate velit.
-                        </p>
-                    </div>
-                    <div class="done">
-                        <div class="desktop">
-                            <img src="img/trophy.png">
-                        </div>
-                        <h3 class="desktop-title">
-                            Yay! Done.
-                        </h3>
-                        <p class="desktop-description">
-                            Lorem ipsum dolor sit amet, consectetur de
-                            elit, sed do tempor incididunt ut labore eta
-                            rehenderit in voluptate velit.
-                        </p>
-                    </div>
+                    <ul class="hiw-steps clearfix">
+                        <li class="hiw-step">
+                            <i class="hiw-step-arrow"></i>
+                            <img src="img/desktop.png" class="hiw-step-image">
+                            <h3 class="hiw-step-title">
+                                Connect Device
+                            </h3>
+                            <p class="hiw-step-description">
+                                Lorem ipsum dolor sit amet, consectetur de
+                                elit, sed do tempor incididunt ut labore eta
+                                rehenderit in voluptate velit.
+                            </p>
+                        </li>
+                        <li class="hiw-step">
+                            <i class="hiw-step-arrow"></i>
+                            <img src="img/toggles.png" class="hiw-step-image">
+                            <h3 class="hiw-step-title">
+                                Configure it
+                            </h3>
+                            <p class="hiw-step-description">
+                                Lorem ipsum dolor sit amet, consectetur de
+                                elit, sed do tempor incididunt ut labore eta
+                                rehenderit in voluptate velit.
+                            </p>
+                        </li>
+                        <li class="hiw-step">
+                            <img src="img/trophy.png" class="hiw-step-image">
+                            <h3 class="hiw-step-title">
+                                Yay! Done.
+                            </h3>
+                            <p class="hiw-step-description">
+                                Lorem ipsum dolor sit amet, consectetur de
+                                elit, sed do tempor incididunt ut labore eta
+                                rehenderit in voluptate velit.
+                            </p>
+                        </li>
+                    </ul>
                 </div>
             </section>
 
