--- a/index.html
+++ b/index.html
@@ -120,5 +120,197 @@
                 </div>
             </section>
 
+            <section class="section benefits">
+                <div class="container">
+                    <h2 class="section-title">
+                        The benefits
+                    </h2>
+                    <p class="section-description">
+                        List out your product’s benefit here. A small description about what it is and how it helps the user. You can also add some icons.
+                    </p>
+                    <ul class="bsteps clearfix">
+                        <li class="bstep">
+                            <h3 class="bstep-title">
+                                GPS Tracking
+                            </h3>
+                            <p class="bstep-description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </p>
+                        </li>
+                        <li class="bstep">
+                            <h3 class="bstep-title">
+                                Heartbeat Analysis
+                            </h3>
+                            <p class="bstep-description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </p>
+                        </li>
+                        <li class="bstep">
+                            <h3 class="bstep-title">
+                                Security first
+                            </h3>
+                            <p class="bstep-description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </p>
+                        </li>
+                        <li class="bstep">
+                            <h3 class="bstep-title">
+                                Innovative idea
+                            </h3>
+                            <p class="bstep-description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </p>
+                        </li>
+                        <li class="bstep">
+                            <h3 class="bstep-title">
+                                Save your bills
+                            </h3>
+                            <p class="bstep-description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </p>
+                        </li>
+                        <li class="bstep">
+                            <h3 class="bstep-title">
+                                Proven technology
+                            </h3>
+                            <p class="bstep-description">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="section section-dark watch">
+                <div class="container">
+                    <div class="row clearfix">
+                        <div class="column">
+                            <ul class="columnsteps">
+                                <li class="columnstep">
+                                    <h3 class="column-title">
+                                        Fast and secure
+                                    </h3>
+                                    <p class="column-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    </p>
+                                </li>
+                                <li class="columnstep">
+                                    <h3 class="column-title">
+                                        Voive Assistant
+                                    </h3>
+                                    <p class="column-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    </p>
+                                </li>
+                                <li class="columnstep">
+                                    <h3 class="column-title">
+                                        Apps you love
+                                    </h3>
+                                    <p class="column-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="column">
+                            <img src="img/apple-watch-3.png" alt="watch" class="column-image">
+                        </div>
+                        <div class="column">
+                            <ul class="columnsteps">
+                                <li class="columnstep">
+                                    <h3 class="column-title">
+                                        Stay in touch
+                                    </h3>
+                                    <p class="column-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    </p>
+                                </li>
+                                <li class="columnstep">
+                                    <h3 class="column-title">
+                                        Designed for you
+                                    </h3>
+                                    <p class="column-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    </p>
+                                </li>
+                                <li class="columnstep">
+                                    <h3 class="column-title">
+                                        Precise timepiece
+                                    </h3>
+                                    <p class="column-description">
+                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section collection">
+                <div class="container">
+                    <h2 class="section-title">
+                        Our collection
+                    </h2>
+                    <p class="section-description">
+                        You are unique. You have unique style and you need a unique watch for you. Choose from our collection of watches.
+                    </p>
+                    <ul class="collection-steps clearfix">
+                        <li class="collection-step">
+                            <img src="img/collection-1.jpg" alt="collection1" class="collection-img">
+                            <h3 class="collection-title">
+                                Watch Limited Edition
+                            </h3>
+                            <p class="collection-description">
+                                Stainless steel case
+                            </p>
+                            <h3 class="collection-price">
+                                $399
+                            </h3>
+                            <a href="#" class="collection-button">Choose</a>
+                        </li>
+                        <li class="collection-step">
+                            <img src="img/collection-2.jpg" alt="collection1" class="collection-img">
+                            <h3 class="collection-title">
+                                Watch Bracelet
+                            </h3>
+                            <p class="collection-description">
+                                White strap & Stainless steel
+                            </p>
+                            <h3 class="collection-price">
+                                $299
+                            </h3>
+                            <a href="#" class="collection-button">Choose</a>
+                        </li>
+                        <li class="collection-step">
+                            <img src="img/collection-3.jpg" alt="collection1" class="collection-img">
+                            <h3 class="collection-title">
+                                Watch Original
+                            </h3>
+                            <p class="collection-description">
+                                The FirstWatch ever released
+                            </p>
+                            <h3 class="collection-price">
+                                $249
+                            </h3>
+                            <a href="#" class="collection-button">Choose</a>
+                        </li>
+                        <li class="collection-step">
+                            <img src="img/collection-4.jpg" alt="collection1" class="collection-img">
+                            <h3 class="collection-title">
+                                Watch Sports Edition
+                            </h3>
+                            <p class="collection-description">
+                                Water proof and Fitness tracking
+                            </p>
+                            <h3 class="collection-price">
+                                $399
+                            </h3>
+                            <a href="#" class="collection-button">Choose</a>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
         </body>
 </html>
