--- a/index.html
+++ b/index.html
@@ -365,36 +365,38 @@
                 </div>
             </section>
 
-            <section class="section apps">
-                <div class="apps-row">
-                    <div class="apps-split topleft">
-                        <img src="img/split-1.jpg" alt="split">
-                    </div>
-                    <div class="apps-split topright">
-                        <h2 class="apps-title">
-                            Every Apps you wanted
-                        </h2>
-                        <p class="apps-description">
-                            You won’t just send and receive messages, calls, and mail more easily and efficiently.
-                            You’ll express yourself in unique, fun, and more personal ways.
-                            Communicating with Watch is discreet, sophisticated, and nuanced. a whole new way to
-                            connect with others.
-                        </p>
-                    </div>
-                    <div class="apps-split botleft">
-                        <h2 class="apps-title">
-                            Health and Fitness
-                        </h2>
-                        <p class="apps-description">
-                            Fitness isn’t just about running, biking, or hitting the gym.
-                            It’s also about being active throughout the day. Watch measures all the ways you move,
-                            such as walking the dog, taking the stairs, or playing with your kids.
-                            It even keeps track of when you stand up.
-                        </p>
-                    </div>
-                    <div class="apps-split botright">
-                        <img src="img/split-2.jpg" alt="split">
-                    </div>
+            <section class="apps">
+                <div class="apps-row clearfix">
+                    <ul class="apps-steps">
+                        <li class="apps-step">
+                            <img src="img/split-1.jpg" alt="split" height="459px" width="830px">
+                        </li>
+                        <li class="apps-step">
+                            <h2 class="apps-title">
+                                Every Apps you wanted
+                            </h2>
+                            <p class="apps-description">
+                                You won’t just send and receive messages, calls, and mail more easily and efficiently.
+                                You’ll express yourself in unique, fun, and more personal ways.
+                                Communicating with Watch is discreet, sophisticated, and nuanced. a whole new way to
+                                connect with others.
+                            </p>
+                        </li>
+                        <li class="apps-step">
+                            <h2 class="apps-title botleft">
+                                Health and Fitness
+                            </h2>
+                            <p class="apps-description botleft">
+                                Fitness isn’t just about running, biking, or hitting the gym.
+                                It’s also about being active throughout the day. Watch measures all the ways you move,
+                                such as walking the dog, taking the stairs, or playing with your kids.
+                                It even keeps track of when you stand up.
+                            </p>
+                        </li>
+                        <li class="apps-step botright">
+                            <img src="img/split-2.jpg" alt="split" height="459px" width="830px">
+                        </li>
+                    </ul>
                 </div>
             </section>
 
