--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
                 <meta charset="utf-8">
                 <title>Product landing page</title>
                 <link rel="stylesheet" href="css/style.css">
+                <link rel="stylesheet" href="css/font-awesome.css">
         </head>
-        <>
+        <body>
              <div class="header-wrapper">
                  <header class="container header clearfix">
                      <a href="#" class="header-logo">
@@ -366,10 +367,10 @@
             </section>
 
             <section class="apps">
-                <div class="apps-row clearfix">
+                <div class="container clearfix">
                     <ul class="apps-steps">
                         <li class="apps-step">
-                            <img src="img/split-1.jpg" alt="split" height="459px" width="830px">
+                            <img src="img/split-1.jpg" alt="split" width="100%">
                         </li>
                         <li class="apps-step">
                             <h2 class="apps-title">
@@ -394,9 +395,134 @@
                             </p>
                         </li>
                         <li class="apps-step botright">
-                            <img src="img/split-2.jpg" alt="split" height="459px" width="830px">
+                            <img src="img/split-2.jpg" alt="split" width="100%">
                         </li>
                     </ul>
+                </div>
+            </section>
+
+            <section class="section section-dark reviews">
+                <div class="container clearfix">
+                    <h2 class="section-title">
+                        Reviews
+                    </h2>
+                    <p class="section-description">
+                        Don’t take our word,. See what our experts says about the watch.
+                        We have got over 1000s of positive reviews.
+                    </p>
+                    <ul class="review-steps">
+                        <li class="review-step">
+                            <img src="img/quote.png" alt="quote" class="quote-img">
+                            <p class="review-description">
+                                The Watch is the nicest smartwatch available,
+                                but it's more status symbol than wearable revolutionary.
+                                Most of the Watch's features are great.
+                            </p>
+                            <img src="img/reviewer1.png" alt="review" class="review-img">
+                        </li>
+                        <li class="review-step">
+                            <img src="img/quote.png" alt="quote" class="quote-img">
+                            <p class="review-description">
+                                Watch is the most ambitious, well constructed smartwatch ever seen,
+                                but first-gen shortfalls make it feel more like a fashionable toy than a necessary tool.
+                            </p>
+                            <img src="img/reviewer2.png" alt="review" class="review-img">
+                        </li>
+                        <li class="review-step">
+                            <img src="img/quote.png" alt="quote" class="quote-img">
+                            <p class="review-description">
+                                Watch is the best smartwatch we’ve used,
+                                and the first that feels friendly and has character.
+                                Watch OS 2.0 adds needed app and Siri abilities.
+                            </p>
+                            <img src="img/reviewer3.png" alt="review" class="review-img">
+                        </li>
+                    </ul>
+                    <h3 class="featured-title">
+                        As featured on
+                    </h3>
+                    <ul class="featured-row">
+                        <li class="featured-img">
+                            <img src="img/featured1.png" alt="feature" class="featured-img" width="100%">
+                        </li>
+                        <li class="featured-img">
+                            <img src="img/featured2.png" alt="feature" class="featured-img" width="100%">
+                        </li>
+                        <li class="featured-img">
+                            <img src="img/featured3.png" alt="feature" class="featured-img" width="100%">
+                        </li>
+                        <li class="featured-img">
+                            <img src="img/featured4.png" alt="feature" class="featured-img" width="100%">
+                        </li>
+                        <li class="featured-img">
+                            <img src="img/featured5.png" alt="feature" class="featured-img" width="100%">
+                        </li>
+                        <li class="featured-img">
+                            <img src="img/featured6.png" alt="feature" class="featured-img" width="100%">
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="section faq">
+                <div class="container clearfix">
+                    <h2 class="section-title">
+                        FAQ
+                    </h2>
+                    <p class="section-description">
+                        Got questions? We’ve got answers.
+                        If you have some other questions, feel free to send us an email to
+                        <a href="#" class="faq-mail">hello@product.com</a>
+                    </p>
+                    <div class="faq-row clearfix">
+                        <div class="faq-step">
+                            <h3 class="faq-title">
+                                What is Watch? How it works?
+                            </h3>
+                            <p class="faq-description">
+                                Watch took center stage at this year's Product Show with a preview of watch OS 2.
+                                The next generation of Watch software is packed with features
+                                that just might turn the device from a nice-to-have into a must-have.
+                                If you already own an Apple Watch, you'll have to live with the old software until fall.
+                                You’ll love it at the first use.
+                            </p>
+                        </div>
+                        <div class="faq-step">
+                            <h3 class="faq-title">
+                                How the watch is made?
+                            </h3>
+                            <p class="faq-description">
+                                Watch has an anodized aluminum case (which is lighter than stainless steel)
+                                in silver or space gray, and the face is Ion-X glass, which also designed to be
+                                hard and rugged (as well as a little bit lighter) than the sapphire.
+                                It’s definitely the lightest of the three Apple Watch editions, making it
+                                an ideal exercise companion.
+                            </p>
+                        </div>
+                        <div class="faq-step">
+                            <h3 class="faq-title">
+                                Can I swap out the watch band?
+                            </h3>
+                            <p class="faq-description">
+                                Absolutely. Watch comes with six bands that are easy to mix and match any band with
+                                any watch. You can swap them out as your heart desires without the aid of any
+                                tools—as long as the band and watch are the same size.
+                                (The Leather Loop band, for example, only fits 42mm watches, not the smaller 38mm size.)
+                            </p>
+                        </div>
+                        <div class="faq-step">
+                            <h3 class="faq-title">
+                                So it’s a watch and a fitness tracker?
+                            </h3>
+                            <p class="faq-description">
+                                The accelerometer lets the watch count your steps, and it extrapolate distance on its own,
+                                or rely on the GPS in the paired Phone to trace your exact route.
+                                That step data comes in handy for two of the apps included on the watch:
+                                Activity and Workout. Both of the watch’s fitness apps sync data back to the
+                                Health and Fitness apps on your Phone.
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </section>
 
