Added some sections

--- a/index.html
+++ b/index.html
@@ -526,5 +526,196 @@
                 </div>
             </section>
 
+            <section class="section tech-specs">
+                <div class="container">
+                    <h2 class="section-title">
+                        Tech specs
+                    </h2>
+                    <p class="section-description">
+                        Need more info? Please have a look at the tech specs of the watch.
+                        We’ve used Latest technology & quality materials
+                    </p>
+                    <ul class="specs-steps clearfix">
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Compatibility
+                            </h3>
+                            <p class="specs-step-description">
+                                iPhone iOS 7 & up
+                                Android 4.3 & uptexts
+                                Bluetooth 4.0
+                                Notification for calls / texts
+                            </p>
+                        </li>
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                App
+                            </h3>
+                            <p class="specs-step-description">
+                                Set daily goals
+                                Analyze history
+                                Sync to phone & cloud
+                                Connect to Apple health kit
+                                Connect to Google fit
+                                Watch firmware upgrade
+                            </p>
+                        </li>
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Vibration silent alarms
+                            </h3>
+                            <p class="specs-step-description">
+                                Phone notifications
+                                Daily goal reached
+                                Daily wake-up alarm
+                                Location assistance
+                                Accessiblity features
+                            </p>
+                        </li>
+                    </ul>
+                    <ul class="specs-steps clearfix">
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Watch
+                            </h3>
+                            <p class="specs-step-description">
+                                12.6mm thickness
+                                3.16L stainless steel case
+                                40mm diameter
+                                5 ATM water resistant
+                                Sapphire glass crystal
+                            </p>
+                        </li>
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Straps
+                            </h3>
+                            <p class="specs-step-description">
+                                Italian leather with natural lining
+                                Comfort sport fabric
+                                Quick-release pins
+                            </p>
+                        </li>
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Activity tracking
+                            </h3>
+                            <p class="specs-step-description">
+                                Step counting
+                                Distance
+                                Calories burned
+                                Swimming (strokes)
+                            </p>
+                        </li>
+                    </ul>
+                    <ul class="specs-steps clearfix">
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Timekeeping
+                            </h3>
+                            <p class="specs-step-description">
+                                Swiss ETA movement
+                                Accurate, reliable
+                            </p>
+                        </li>
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Battery power
+                            </h3>
+                            <p class="specs-step-description">
+                                Standard CR2025 6+ months
+                                Standard 364 for timekeeping 5+ years
+                                Solar Power available as aupgrade
+                            </p>
+                        </li>
+                        <li class="specs-step">
+                            <h3 class="specs-step-title">
+                                Sensors
+                            </h3>
+                            <p class="specs-step-description">
+                                MEMS 3-axis accelerometer
+                                Highly accurate
+                                Low power consumption
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="section section-dark meet-team">
+                <div class="container">
+                    <h2 class="section-title">
+                        Meet the team
+                    </h2>
+                    <p class="section-description">
+                        We are a small group of inverntors, hackers and designers from the differrent
+                        parts of the world on a mission.
+                    </p>
+                    <ul class="team-steps clearfix">
+                        <li class="team-step">
+                            <img src="img/team-1.jpg" alt="team" class="team-img">
+                            <h4 class="team-name">
+                                Gary Elliott
+                            </h4>
+                            <p class="team-description">
+                                Co-Founder and CEO
+                            </p>
+                        </li>
+                        <li class="team-step">
+                            <img src="img/team-2.jpg" alt="team" class="team-img">
+                            <h4 class="team-name">
+                                Jeffrey Allen
+                            </h4>
+                            <p class="team-description">
+                                Co-Founder and CTO
+                            </p>
+                        </li>
+                        <li class="team-step">
+                            <img src="img/team-3.jpg" alt="team" class="team-img">
+                            <h4 class="team-name">
+                                Sara Mendez
+                            </h4>
+                            <p class="team-description">
+                                Lead Developer, Hacker
+                            </p>
+                        </li>
+                        <li class="team-step">
+                            <img src="img/team-4.jpg" alt="team" class="team-img">
+                            <h4 class="team-name">
+                                Albert Castro
+                            </h4>
+                            <p class="team-description">
+                                3D Designer & Prototyper
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+
+            <section class="section timeline">
+                <div class="container">
+                    <h2 class="section-title">
+                        Timeline
+                    </h2>
+                    <p class="section-description">
+                        Here’s a roadmap of our product to highlight the milestones from the
+                        initial phase to delivery and future updates.
+                    </p>
+                    <div class="timeline-row">
+                        <div class="timeline-post">
+                            <div class="timeline-post-now">Now</div>
+                        </div>
+                        <div class="timeline-post timeline1">
+                            <div class="timeline-date">
+                                23 JAN 2014
+                            </div>
+                            <div class="timeline-title">
+                                Mass Production
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
         </body>
 </html>
