--- a/index.html
+++ b/index.html
@@ -701,17 +701,78 @@
                         Here’s a roadmap of our product to highlight the milestones from the
                         initial phase to delivery and future updates.
                     </p>
-                    <div class="timeline-row">
+                    <div class="timeline-row clearfix">
                         <div class="timeline-post">
                             <div class="timeline-post-now">Now</div>
                         </div>
-                        <div class="timeline-post timeline1">
-                            <div class="timeline-date">
+                        <ul class="timeline-posts clearfix">
+                            <li class="timeline-line timeline-date-left">
                                 23 JAN 2014
-                            </div>
-                            <div class="timeline-title">
-                                Mass Production
-                            </div>
+                            </li>
+                            <li class="timeline-line timeline-title-right">
+                                <h4 class="inner">Mass Production</h4>
+                            </li>
+                            <li class="timeline-line timeline-title-left">
+                                <h4 class="inner">Testin Pre-Production Samples</h4>
+                            </li>
+                            <li class="timeline-line timeline-date-right">
+                                23 JAN 2014
+                            </li>
+                            <li class="timeline-line timeline-date-left">
+                                23 JAN 2014
+                            </li>
+                            <li class="timeline-line timeline-title-right">
+                                <h4 class="inner">Croudfunding Campaign</h4>
+                                <p class="inner-description">And an optional description.
+                                    You may add little description of your milestone if you want.</p>
+                            </li>
+                            <li class="timeline-line timeline-title-left">
+                                <h4 class="inner">Preview at CES</h4>
+                            </li>
+                            <li class="timeline-line timeline-date-right">
+                                23 JAN 2014
+                            </li>
+                        </ul>
+                        <div class="timeline-post">
+                            <div class="timeline-post-now">2015</div>
+                        </div>
+                        <ul class="timeline-posts clearfix">
+                            <li class="timeline-line timeline-date-left">
+                                23 JAN 2014
+                            </li>
+                            <li class="timeline-line timeline-title-right">
+                                <h4 class="inner">3D Prototype & Testing</h4>
+                            </li>
+                            <li class="timeline-line timeline-title-left">
+                                <h4 class="inner">Research and Developing</h4>
+                            </li>
+                            <li class="timeline-line timeline-date-right">
+                                23 JAN 2014
+                            </li>
+                        </ul>
+                        <div class="timeline-post">
+                            <div class="timeline-post-now">IDEA</div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="section mobile-app clearfix">
+                <div class="container">
+                    <div class="row2 clearfix">
+                        <div class="rowleft">
+                            <img src="img/app-screen.png" alt="watch" class="mobile-app-img">
+                        </div>
+                        <div class="rowright">
+                            <h2 class="mobile-app-title">
+                                The watch
+                            </h2>
+                            <p class="mobile-app-description">
+                                With an image in the side of this conetent, you can use this section to write about some cool
+                                thing about your product or its features.
+                            </p>
+                            <a href="#" class="mobile-app-button"><img src="img/app-store.png" alt="store"></a>
+                            <a href="#" class="mobile-app-button"><img src="img/google-play.png" alt="google"></a>
                         </div>
                     </div>
                 </div>
