Added another 2 sections

--- a/index.html
+++ b/index.html
@@ -446,10 +446,10 @@
                             <img src="img/featured1.png" alt="feature" class="featured-img" width="100%">
                         </li>
                         <li class="featured-img">
-                            <img src="img/featured2.png" alt="feature" class="featured-img" width="100%">
+                            <img src="img/featured2.png" alt="feature" class="featured-img second" width="100%">
                         </li>
                         <li class="featured-img">
-                            <img src="img/featured3.png" alt="feature" class="featured-img" width="100%">
+                            <img src="img/featured3.png" alt="feature" class="featured-img third" width="100%">
                         </li>
                         <li class="featured-img">
                             <img src="img/featured4.png" alt="feature" class="featured-img" width="100%">
@@ -458,7 +458,7 @@
                             <img src="img/featured5.png" alt="feature" class="featured-img" width="100%">
                         </li>
                         <li class="featured-img">
-                            <img src="img/featured6.png" alt="feature" class="featured-img" width="100%">
+                            <img src="img/featured6.png" alt="feature" class="featured-img last" width="100%">
                         </li>
                     </ul>
                 </div>
@@ -722,12 +722,12 @@
                                 23 JAN 2014
                             </li>
                             <li class="timeline-line timeline-title-right">
-                                <h4 class="inner">Croudfunding Campaign</h4>
+                                <h4 class="inner">Croudfunding Campaign
                                 <p class="inner-description">And an optional description.
-                                    You may add little description of your milestone if you want.</p>
+                                    You may add little description of your milestone if you want.</p></h4>
                             </li>
                             <li class="timeline-line timeline-title-left">
-                                <h4 class="inner">Preview at CES</h4>
+                                <h4 class="inner preview">Preview at CES</h4>
                             </li>
                             <li class="timeline-line timeline-date-right">
                                 23 JAN 2014
@@ -761,21 +761,52 @@
                 <div class="container">
                     <div class="row2 clearfix">
                         <div class="rowleft">
-                            <img src="img/app-screen.png" alt="watch" class="mobile-app-img">
+                            <img src="img/app-screen.png" alt="watch" class="mobile-app-img" width="500px">
                         </div>
                         <div class="rowright">
                             <h2 class="mobile-app-title">
-                                The watch
+                                Mobile App for watch
                             </h2>
                             <p class="mobile-app-description">
-                                With an image in the side of this conetent, you can use this section to write about some cool
-                                thing about your product or its features.
+                                The smartwatch connects to your iPhone and other iOS devices using Bluetooth,
+                                alerting you to incoming calls, emails, messages and alerts.
+                                Customize your with over 1,000 watchapps found within the smartwatch app.
                             </p>
                             <a href="#" class="mobile-app-button"><img src="img/app-store.png" alt="store"></a>
                             <a href="#" class="mobile-app-button"><img src="img/google-play.png" alt="google"></a>
                         </div>
                     </div>
                 </div>
+            </section>
+
+            <section class="section newsletter">
+                <div class="container">
+                    <h2 class="section-title">
+                        Newsletter
+                    </h2>
+                    <p class="section-description">
+                        Subscribe to our product newsletter to get notified when we launch the product
+                        or when we completed a milestone
+                    </p>
+                    <form class="newsletter-form" method="post">
+                        <div class="input-group clearfix">
+                            <input type="email" class="form-control" name="email" placeholder="Enter Your Email Address">
+                            <button type="submit" class="input-group-addon">
+                                <span>
+                                    <img src="img/right-angle-white.png" alt="angle">
+                                </span>
+                            </button>
+                        </div>
+                    </form>
+                    <p class="newsletter-text">
+                        <img src="img/protect.png" alt="lock">
+                        No Spam. We Promise. Unsubscribe anytime.
+                    </p>
+                </div>
+            </section>
+
+            <section class="section map">
+
             </section>
 
         </body>
